<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.send_otp.SendOtpActivity">

    <data>

        <variable
            name="activity"
            type="com.ai.tirios.ui.send_otp.SendOtpActivity" />

        <variable
            name="send_otp"
            type="com.ai.tirios.ui.send_otp.SendOtpViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_verify_otp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_85sdp"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_45sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen10dp"
                android:contentDescription="TODO"
                android:onClick="@{()->activity.onBackPressed()}"
                app:srcCompat="@drawable/ic_arrow_back_black" />

            <com.ai.tirios.custom.SFProSemiboldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/verify_otp"
                android:paddingRight="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_21sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.ai.tirios.custom.SFProRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="@dimen/_250sdp"
                android:text="@string/please_enter_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/et_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_65sdp"
                android:textColor="@color/orange"
                app:bar_active_color="@color/orange"
                app:bar_enabled="true"
                app:bar_height="0dp"
                app:bar_inactive_color="@color/greytxt"
                app:box_margin="8dp"
                app:height="@dimen/_47sdp"
                app:length="4"
                app:otp_box_background="@drawable/rect_grey_bg"
                app:otp_text_size="@dimen/_19sdp"
                app:width="@dimen/_47sdp" />

            <com.ai.tirios.custom.SFProRegularTextView
                android:id="@+id/tv_timer"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/otp_exp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_69sdp"
                android:orientation="horizontal">

                <com.ai.tirios.custom.SFProBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/havent_received_otp"
                    android:textColor="@color/black"
                    android:paddingRight="@dimen/_5sdp"
                    android:textSize="@dimen/_12sdp" />

                <com.ai.tirios.custom.SFProBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:onClick="@{()->send_otp.onResendOtp()}"
                    android:textColor="@color/light_pink"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>


        </LinearLayout>

        <com.ai.tirios.custom.SFProSemiboldTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rect_solidorange_30corner"
            android:gravity="center"
            android:onClick="@{()->send_otp.onSendOtp()}"
            android:text="@string/submit"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />
    </RelativeLayout>

</layout>
