<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">

    <data>
        <variable
            name="activity"
            type="com.ai.tirios.ui.forgot_password.ForgotPasswordActivity" />
        <variable
            name="forgot_password"
            type="com.ai.tirios.ui.forgot_password.ForgotPasswordViewModel" />
        <variable
            name="valid_password"
            type="Boolean" />
        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_forgot_password_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10dp"
            android:layout_marginTop="@dimen/dimen30dp"
            android:padding="@dimen/_15sdp"
            android:paddingStart="@dimen/_2sdp"
            android:onClick="@{()->activity.onBackPressed()}"
            app:srcCompat="@drawable/ic_arrow_back_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen20dp"
            android:orientation="vertical">

            <com.ai.tirios.custom.SFProSemiboldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen30dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen25dp" />

            <com.ai.tirios.custom.SFProSemiboldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_alert"
                android:visibility="@{valid_password ? View.GONE : View.VISIBLE}"
                android:textColor="@color/orange"
                android:layout_marginTop="@dimen/dimen30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:background="@drawable/rect_solidwhite_5corner"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <com.ai.tirios.custom.SPProRegularEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_solidgray_5corner"
                    android:hint="@string/password"
                    android:padding="@dimen/_20sdp"
                    android:textSize="17dp"
                    android:inputType="textPassword"/>

                <com.ai.tirios.custom.SPProRegularEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen25dp"
                    android:background="@drawable/rect_solidgray_5corner"
                    android:hint="@string/confirm_password"
                    android:padding="@dimen/_20sdp"
                    android:textSize="17dp"
                    android:inputType="textPassword" />

            </LinearLayout>

            <com.ai.tirios.custom.SFProSemiboldTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/dimen15dp"
                android:background="@drawable/rect_light_pink"
                android:gravity="center"
                android:padding="@dimen/dimen10dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen20dp"
                android:onClick="@{()->forgot_password.onUpdateClick()}"/>

        </LinearLayout>

    </LinearLayout>

</layout>