<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.bank_accounts.BankAccountsActivity">

    <data>
        <variable
            name="bank_accounts"
            type="com.ai.tirios.ui.bank_accounts.BankAccountsViewModel" />
        <variable
            name="activity"
            type="com.ai.tirios.ui.bank_accounts.BankAccountsActivity" />
        <import type="android.view.View"/>
        <variable
            name="bank_accounts_size"
            type="Integer" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/maintenancebg"
                android:padding="@dimen/_10sdp">

                <com.ai.tirios.custom.SFProRegularTextView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableStart="@drawable/ic_arrow_back"
                    android:text="@string/back"
                    android:textSize="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:textColor="@color/orange"
                    android:onClick="@{()->activity.onBackPressed()}"/>

                <com.ai.tirios.custom.SFProBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/bank_accounts"
                    android:gravity="center"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/_15sdp" />

                <com.ai.tirios.custom.SFProRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_account"
                    android:textSize="@dimen/_15sdp"
                    android:visibility="@{bank_accounts_size != 0 ? View.GONE : View.VISIBLE}"
                    android:textColor="@color/orange"
                    android:onClick="@{()->bank_accounts.addAccountClick()}"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
            </androidx.recyclerview.widget.RecyclerView>

            <com.ai.tirios.custom.SFProRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:visibility="@{bank_accounts_size != 0 ? View.GONE : View.VISIBLE}"
                android:layout_centerInParent="true"
                android:text="@string/no_bank_accounts_added"/>

        </RelativeLayout>

    </LinearLayout>

</layout>